fix: Undefined title when mobile view/Wrong color

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2892,8 +2892,7 @@
 				background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.3)), url("../img/bg01.png");
 				height: 44px;
 				line-height: 44px;
-				/*box-shadow: 0 4px 0 0 #37c0fb;*/
-				box-shadow: 0 4px 0 0 rgb(190,120,40);
+				box-shadow: 0 4px 0 0 #2F2F2F;
 			}
 
 				#titleBar .title {
